--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
 	"files.associations": {
-		"sstream": "c"
+		"sstream": "c",
+		"minishell.h": "c",
+		"execute.h": "c",
+		"__locale": "c",
+		"ios": "c"
 	}
 }
