--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "42header.email": "moabid@student.42heilbronn.de",
     "42header.username": "moabid",
     "files.associations": {
-        "builtin_utils.h": "c"
+        "builtin_utils.h": "c",
+        "minishell.h": "c",
+        "utils.h": "c",
+        "libft.h": "c"
     }
 }
